--- a/yourStyle.css
+++ b/yourStyle.css
@@ -38,7 +38,7 @@ body {
 }
 
 .calculator__display--bare {
-  /* display: none; */
+  display: none;
   background-color: #000000;
   text-align: center;
   vertical-align: middle;
@@ -62,13 +62,12 @@ body {
 }
 
 .calculator__display--for-advanced {
-  display: none; /* 이 줄을 모두 지우면 advanced 테스트를 하실 수 있습니다.*/
-  background-color: #ffffff;
+  background-color: #000000;
   height: 100px;
   width: 100%;
+  text-align: right;
   border-radius: 10px;
   font-size: 20px;
-  text-align: center;
   vertical-align: middle;
   padding: 25px 15px;
   overflow: hidden;
@@ -127,6 +126,10 @@ body {
 .button__row > .isPressed {
   background-color: #00da75;
 }
+/* 
+.button__row:active > .operator {
+  background-color: #00da75;
+} */
 
 .logo {
   position: fixed;
